--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "tests"
   },
   "keywords": [],
-  "author": "",
+  "author": "Adrianajani",
   "license": "ISC",
   "description": "",
   "dependencies": {
